First running version

--- a/src/KProjectConverter/project.json
+++ b/src/KProjectConverter/project.json
@@ -1,4 +1,7 @@
 ﻿{
+    "version": "0.1.0-*",
+    "authors": ["Bart Vries"],
+    "description": "Converts a folder of csproj to kproj, reporting errors and warnings.", 
     "dependencies": {
         "Newtonsoft.Json": "5.0.8"
     },
@@ -9,5 +12,6 @@
                 "System.Xml.Linq": ""
             }
         }
-    }
+    },
+    "resources": "embed/**/*.*"
 }
