--- a/src/KProjectConverter/project.json
+++ b/src/KProjectConverter/project.json
@@ -1,17 +1,20 @@
 ﻿{
-  "version": "0.1.0-*",
-  "authors": [ "Bart Vries" ],
-  "description": "Converts a folder of csproj to kproj, reporting errors and warnings.",
-  "dependencies": {
-    "Newtonsoft.Json": "5.0.8"
-  },
-  "frameworks": {
-    "aspnet50": {
-      "dependencies": {
-        "System.Xml": "",
-        "System.Xml.Linq": ""
-      }
-    }
-  },
-  "resources": "embed/**/*.*"
+    "version": "1.0.0-*",
+    "authors": [ "Bart Vries" ],
+    "description": "Converts a folder of csproj to kproj, reporting errors and warnings.",
+    "dependencies": {
+        "Newtonsoft.Json": ""
+    },
+    "commands": {
+        "run": "run"
+    },
+    "frameworks": {
+        "aspnet50": {
+            "frameworkAssemblies": {
+                "System.Xml": "",
+                "System.Xml.Linq": ""
+            }
+        }
+    },
+    "resources": [ "embed/**/*.*" ]
 }
